@@ -125,13 +125,8 @@ plugins.withType(JavaPlugin).configureEach{
 }
 
 tasks.withType(Test).configureEach {
-  java {
-    modularity.inferModulePath = true
-  }
-  jvmArgs += [
-          '--add-exports',
-          'org.apache.beam.sdk/org.apache.beam.sdk.fn.data=org.apache.beam.sdk.jpmstests'
-  ]
+  classpath += configurations.runtimeClasspath
+  inputs.files(configurations.runtimeClasspath)
 }
 
 // JPMS requires JDK > 8. Test tasks enabled when either
